Modified the landing page

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,6 +1,9 @@
 $color-primary: #4062BB;
 $color-secondary: #E5F2C9;
+$color-primary-light: #98b1f4;
 $color-gray: #f0f0f0;
 $white: #fff;
+$black: #000;
 
-$radius: 0.2rem
+$radius: 0.2rem;
+$btn-radius: 0.5rem;
