--- a/src/sass/components/_landingPage.scss
+++ b/src/sass/components/_landingPage.scss
@@ -12,18 +12,52 @@
     padding: 1rem 2rem;
     background-color: $white;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    position: fixed;
     width: 100%;
-    z-index: 1000;
 
     &--title{
       font-size: 2rem;
       font-weight: 700;
       color: $color-primary;
     }
+    &--btn{
+      padding: 0.5rem 1rem;
+      background-color: $color-primary;
+      border-radius: $btn-radius;
+      color: $white;
+      font-weight: bold;
+      }
+  }
+
+    &__slogan{
+      background-color: $white;
+      text-align: center;
+      margin: 20rem;
+      color: $color-primary;
+      font-size: 1.5rem;
+      font-weight: 700;
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-transform: capitalize;
+
+      &--btn{
+        margin: 2rem;
+        padding: 1rem 2rem;
+        border: none;
+        border-radius: $btn-radius;
+        background-color: $color-primary;
+        color: $white;
+        font-size: 2rem;
+        font-weight: 700;
+        cursor: pointer;
+        transition: all 0.3s;
 
         &:hover{
-          color: $color-secondary;
+          background-color: $color-primary-light;
+          color: $black;
         }
       }
+    }
 }
