--- a/src/sass/components/_landingPage.scss
+++ b/src/sass/components/_landingPage.scss
@@ -7,6 +7,7 @@
   // background-size: cover;
   height: 100vh;
   width: 100%;
+  background-size: cover;
   background-position: center;
 
   &__nav{
@@ -14,13 +15,13 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
-    background-color: $white;
+    // background-color: $white;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 100%;
 
     &--title{
       font-size: 2rem;
-      font-weight: 700;
+      font-weight: 1000;
       color: $color-primary;
     }
     &--btn{
@@ -44,11 +45,12 @@
   }
   }
     &__slogan{
-      background-color: $white;
+      // background-color: $white;
       text-align: center;
       margin: 20rem auto;
-      color: $color-primary;
-      font-size: 1.5rem;
+      color: $white;
+      
+      font-size: 2rem;
       font-weight: 700;
       width: 50%;
       display: flex;
