--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 @import "components/card";
 @import "components/about";
 @import "components/landingPage";
+@import "components/UserDashboard";
 
 
 @import "pages/signup";
