--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,8 @@
 @import "components/about";
 @import "components/landingPage";
 @import "components/UserDashboard";
+@import "components/sideBar";
+@import "components/userProfile";
 
 
 @import "pages/signup";
