made some pages responsive

--- a/src/sass/components/_userProfile.scss
+++ b/src/sass/components/_userProfile.scss
@@ -32,7 +32,7 @@
       }
 
       button {
-        background-color: #ff00ff;
+        background-color: $color-primary;
         color: #fff;
         border: none;
         padding: 10px 20px;
