--- a/src/sass/components/_landingPage.scss
+++ b/src/sass/components/_landingPage.scss
@@ -3,8 +3,7 @@
   padding: 0;
 }
 .landingPage{
-  background-image: linear-gradient(to right bottom, rgba(111, 164, 213, 0.121), rgba(110, 240, 197, 0.062)), url(https://images.pexels.com/photos/5538626/pexels-photo-5538626.jpeg?auto=compress&cs=tinysrgb&w=400);
-  // background-size: cover;
+  background-image: linear-gradient(to right bottom, rgba(111, 164, 213, 0.121), rgba(110, 240, 197, 0.062)), url(https://images.pexels.com/photos/5537997/pexels-photo-5537997.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
   height: 100vh;
   width: 100%;
   background-size: cover;
@@ -16,7 +15,7 @@
     align-items: center;
     padding: 1rem 2rem;
     // background-color: $white;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
     width: 100%;
 
     &--title{
@@ -52,7 +51,7 @@
       margin: 20rem auto;
       color: $white;
       line-height: 1.2;
-      font-size: 4rem;
+      font-size: 5rem;
       font-weight: 700;
       width: 50%;
       display: flex;
@@ -86,4 +85,29 @@
         }
       }
     }
+}
+
+@media only screen and (max-width: 768px){
+  .landingPage{
+  background-size: cover;
+    &__slogan{
+      width: 80%;
+      font-size: 2rem;
+      margin: 10rem auto;
+      &--btn{
+        padding: 1rem 2rem;
+        margin: 2rem 0;
+        font-size: 1rem;
+      }
+    }
+    &__nav{
+      padding: 1rem;
+      &--title{
+        font-size: 2rem;
+      }
+      &--btn{
+        display: none;
+      }
+    }
+  }
 }
