--- a/src/sass/components/_sideBar.scss
+++ b/src/sass/components/_sideBar.scss
@@ -1,20 +1,29 @@
-// src/components/Navbar.scss
 .navbar {
-  width: 220px;
+  width: 320px;
   background-color: $white;
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   position: fixed;
   height: 100%;
 
-  ul {
+  &__list {
     list-style: none;
-    padding: 0;
-    
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 30px;
+    text-transform: capitalize;
+   
     li {
       margin: 15px; 
-    
+     &:hover {
+        background-color: $color-primary;
+        border-radius: 10px;
+        transition: all 0.3s;
+        color: $white;
+      }
+     
       a {
         text-decoration: none;
         color: #333;
@@ -32,3 +41,5 @@
     }
   }
 }
+
+
