--- a/src/sass/pages/_signin.scss
+++ b/src/sass/pages/_signin.scss
@@ -2,14 +2,28 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 20px;
+  max-width: 400px; ;
+  margin: 0 auto;
+  margin-top: 15rem;
   padding: 20px;
-}
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
-.signinForm{
-  width: 300px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  margin-bottom: 20px;
-}
+  &--text{
+    font-size: 2rem;
+    font-family: 'O'
+  }
+  }
+
+  h1{
+    font-size: 24px;
+  }
+
+  .signinForm{
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin: 20px;
+  }
+
+
