--- a/src/sass/pages/_signup.scss
+++ b/src/sass/pages/_signup.scss
@@ -2,8 +2,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 20px;
+  margin: auto;
+  margin-top: 15rem;
+  max-width: 400px;
   padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+  &--text {
+    font-size: 2rem;
+    font-family: 'Oswald';
+    font-weight: 700;
+  }
 }
 
 .signupForm {
